# freemoted

./: AUTHORS  CHANGES  DEVELOP  Makefile.am  PROTOCOL  README.md  README_WIN32  README_WIN32CYGWIN  autogen.sh  clean.sh  configure.ac  setup.nsi  splash.ufo
conf/: Makefile.am  freemoted.conf.linux  freemoted.conf.win32  freemoted_sample.lircrc
src/: 1035.c  FILES  Freemote Control.sln  Freemote Control.vcxproj  FreemotedAppDelegate.h  FreemotedAppDelegate.m  Makefile.am  Resource.h  freemote.rc  freemoted-Info.plist  ifenum.c  ifenum.h  lockutil.c  lockutil.h  main.c  main.h  main.m  regmdns.c  regmdns.h  screen.c  screen.h  stdafx.cpp  stdafx.h  threadutil.c  threadutil.h  types.h  winapp.cpp  xht.c
src/freemoted.xcodeproj/: owner.mode1v3  owner.pbxuser  project.pbxproj
