bin_PROGRAMS = freemoted

## Define the source file for the module
freemoted_SOURCES = main.c types.h screen.c screen.h threadutil.c threadutil.h \
                    lockutil.c lockutil.h 1035.c 1035.h mdnsd.c mdnsd.h \
                    sdtxt.c sdtxt.h xht.c xht.h regmdns.c regmdns.h ifenum.c \
                    ifenum.h

freemoted_CFLAGS = -DSYSCONFDIR=@sysconfdir@
